fix: updated scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,20 +8,20 @@ html {
 }
 
 ::-webkit-scrollbar {
-    width: 2px;
+    width: 6px;
   }
   
   /* Track */
 ::-webkit-scrollbar-track {
-background: #323232;
+background: #FAFAFAFA;
 }
   
   /* Handle */
 ::-webkit-scrollbar-thumb {
-background: #888;
+background: #525252;
 }
   
   /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-background: #555;
+background: #525252;
 }
